  * Updated Loading dialogs
(30-May=>3:02pm).
  * Updated refresher feature
  * Updated Geolocation By obtaining the Lat and Long and storing it in a varaible.
  * Created interfaces directory and added Current-loc.ts
  * Import Interface in weather.ts and created a variable to store lat and lon
(31-May=>10:59Am)
  * Added Api key from darksky to the app to ionic.config.json
  * Called api in weather.service.ts
  * Ca
(31-May=>12:06pm)[Opening a new Branch named Branch B]
  * Lat and long values were hardcoded to darksky, created a promise in weather.ts
  * Refactorized the loader functionality inside GetGeo() method.
  * Removed the Timer (duration property from loader ctrl)
  * added loader.dismiss() to show loading icon for weather app to load the data.
  * Stored the values returned from asynchronous to interface.
(31-may=>1:04pm)
  * Stored values from interfaces (a.k.a named as CurrentLoc) were imported in weather-service.ts.
  * Passed the Interface values as parameters to load() function to make the API call.
  * Added the lat and lon of passed parameter inside the load method
  * Also passed the Interface values as parameters into getWeather method.
  * Changed the GetGeo() second promise this.weatherService.getWeather => this.weatherService.getWeather(currentloc)
(31-may=>3:28pm)
  * Getting other location weather places added in the sidebar
  * Imported CurrentLoc from interfaces.
  * Included locations property to be optional to pages property.
  * Filed some locations in the this.pages array.
  * Added a hasOwnProperty to verify geoloc and title property is present
  * Called the geoloc by using this.navParams.get('geoloc').
  * Created a if else loop, to check whether existing value is there , else create a new interface to hold the new value.
  * Added page.title value from app.component.ts via this.navParams.get('title').
(1-June=>2:30Pm)
  * Added Weatherservice to refresher component. So that when refresh happens it makes the call